Added basic functions and styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <section id='container'>
+        <section id="game-over">
+            <p id="winning-text"></p>
+            <button id="restart">Restart</button>
+        </section>
+        <section id="gameboard">
+            <div class='box' id="square1"></div>
+            <div class='box' id="square2"></div>
+            <div class='box' id="square3"></div>
+            <div class='box' id="square4"></div>
+            <div class='box' id="square5"></div>
+            <div class='box' id="square6"></div>
+            <div class='box' id="square7"></div>
+            <div class='box' id="square8"></div>
+            <div class='box' id="square9"></div>
+        </section>
+        <section id="player-turn"></section>
+    </section>
     
     <script src="scripts.js"></script>
 </body>
